fix: Disable Angular budgets completely

--- a/service-frontend/angular.json
+++ b/service-frontend/angular.json
@@ -37,18 +37,7 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "5MB",
-                  "maximumError": "10MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "50kB",
-                  "maximumError": "100kB"
-                }
-              ],
+              "budgets": [],
               "outputHashing": "all"
             },
             "development": {
