--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,7 +116,7 @@ jobs:
       - name: 🏗️ Build Frontend
         run: |
           cd service-frontend
-          npm run build -- --configuration=production --no-build-optimizer
+          npm run build
       
       - name: 📤 Upload Frontend Artifact
         uses: actions/upload-artifact@v4
